--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -80,7 +80,7 @@
                     <input class=" box my-2 btn btn-primary button" type="button" value="Log in">
                     <div class="text-center">
                         <span class="mx-2">
-                            <a class="link" href>Forgotten account?</a>
+                            <a class="link" href>Forgotten password?</a>
                         </span>
                         <br>
                         <br>
