--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -73,7 +73,7 @@
             </div> -->
             <form action="/login" method="post">
             <div class="col-4 border shadow bg-body rounded text-center">
-                <h3 class="mt-4">Log in to Student Manager Application</h3>
+                <h3 class="mt-4">Student Manager Application</h3>
                 <div>
                     <input class="form-control my-5" type="text" placeholder="Username">
                     <input class="form-control my-5" type="text" placeholder="Password">
